--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -13,6 +13,10 @@
 </a>
 </body>
 <footer th:fragment="footer">
-    &copy;2018 absolutely no one. Source is open at <a th:href="#{upwiseRepoUrl}">github.com/sapphon/upwise</a>.  Issues?  Report them <a th:href="#{upwiseIssuesUrl}">here</a>.
+    <span th:text="#{text.copyright}">(copyright information placeholder)</span>
+    <span th:text="#{text.sourceControlUrlPreamble}">(Source link follows this placeholder) </span>
+    <a th:href="#{url.sourceControlUrl}" th:text="#{text.sourceControlUrlPresentation}">(source control url placeholder)</a>.
+    <span th:text="#{text.issuesUrlPreamble}">(Issues link follows this placeholder)</span>
+    <a th:href="#{url.issuesUrl}" th:text="#{text.issuesUrlPresentation}">(issues url placeholder)</a></span>.
 </footer>
 </html>
