Every request now has the loggedInUser object set as a Thymeleaf model property.  Navbar uses this to show displayname instead of username for logged in user.  [https://trello.com/c/Io4be6Tj]

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -15,7 +15,7 @@
                     <li><a href="/wisdomleaderboard">Leaderboard</a></li>
                     <li><a href="/randomwisdom">Random</a></li>
                     <li><a href="/wisdomsearch">Search</a></li>
-                    <li><a sec:authorize="isAuthenticated()" th:href="@{'/user/' + ${#authentication.name}}" th:text="${'All About ' + #authentication.name}"/></a></li>
+                    <li><a th:if="${loggedInUser}" th:text="'All About ' + ${loggedInUser.displayUsername}" th:href="@{'/user/'+${loggedInUser.loginUsername}}"> </a></li>
                     <li><a sec:authorize="isAuthenticated()" href="/logout">Log Out</a></li>
                     <li><a sec:authorize="isAnonymous()" href="/login">Log In</a></li>
                     <li><a sec:authorize="isAnonymous()" href="/register">Register</a></li>
