--- a/src/main/resources/templates/viewwisdom.html
+++ b/src/main/resources/templates/viewwisdom.html
@@ -26,7 +26,7 @@
                     <div class="voterbadges" th:unless="${#lists.isEmpty(wisdom.votes)}">
                         <a th:each="vote : ${wisdom.votes}" th:href="@{'/user/' + ${vote.addedByUsername}}"
                            class="waves-effect waves-light btn-small user-button"><span
-                                th:text="${vote.addedByUsername}">Bud Bundy</span><i
+                                th:text="${vote.displayName}">Bud Bundy</span><i
                                 class="material-icons left user-button">face</i></a>
                     </div>
                     <p th:if="${#lists.isEmpty(wisdom.votes)}">0 votes</p>
