--- a/src/main/resources/templates/viewwisdom.html
+++ b/src/main/resources/templates/viewwisdom.html
@@ -6,7 +6,7 @@
 <div th:replace="fragments/navbar :: navbar"></div>
 <main>
     <div class="vert-container" th:unless="${wisdom} == null">
-        <span><a th:href="@{'/user/' + ${wisdom.addedByUsername}}" th:text="${wisdom.addedByDisplayName}">intellijames</a> submitted,</span>
+        <h5 class="submitter-link"><a th:href="@{'/user/' + ${wisdom.addedByUsername}}" th:text="${wisdom.addedByDisplayName}">intellijames</a> submitted,</h5>
         <div class="container">
             <div class="row">
                 <div class="col s12">
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class="wisdomSecondaryInfo">
-            <h4 th:text="${wisdom.attribution}" class="almendra center">Doug Linder</h4>
+            <h4 th:text="' ~ ' + ${wisdom.attribution}" class="almendra center">Doug Linder</h4>
             <div class="divider"></div>
             <div class="row">
                 <div class="voter-info col s6">
