--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -10,10 +10,11 @@
     <h2>Register an Upwise Account</h2>
     <form action="#" th:action="@{/register}" th:object="${userToRegister}" method="post">
         <p>Desired Login Name: <input type="text" th:field="*{desiredUsername}" th:placeholder="#{placeholder.username}" tabindex="1"/></p>
-        <p>Display Name (W.I.P.): <input type="text" th:field="*{displayName}" th:placeholder="#{placeholder.displayName}" tabindex="2"/></p>
-        <p>Password: <input type="password" th:field="*{password}" th:placeholder="#{placeholder.password}" tabindex="3"/></p>
-        <p>Confirm Password: <input type="password" th:field="*{confirmPassword}" th:placeholder="#{placeholder.password}" tabindex="4"/></p>
-        <p><input type="submit" value="Submit" tabindex="5"/> <input type="reset" value="Reset" tabindex="6"/></p>
+        <p>Email Address: <input type="email" th:field="*{email}" th:placeholder="#{placeholder.email}" tabindex="2"/></p>
+        <p>Display Name (W.I.P.): <input type="text" th:field="*{displayName}" th:placeholder="#{placeholder.displayName}" tabindex="3"/></p>
+        <p>Password: <input type="password" th:field="*{password}" th:placeholder="#{placeholder.password}" tabindex="4"/></p>
+        <p>Confirm Password: <input type="password" th:field="*{confirmPassword}" th:placeholder="#{placeholder.password}" tabindex="5"/></p>
+        <p><input type="submit" value="Submit" tabindex="6"/> <input type="reset" value="Reset" tabindex="7"/></p>
     </form>
 </div>
 </main>
