Created /forgotpassword form and linked from login page [https://trello.com/c/wNCuc6VH]

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,9 +13,10 @@
                                   tabindex="1"/></p>
             <p>Password: <input type="password" name="upwisePassword" th:placeholder="#{placeholder.password}"
                                 tabindex="2"/></p>
-            <p><input type="submit" value="Submit" tabindex="3"/> <input type="reset" value="Reset" tabindex="4"/></p>
+            <p><input type="submit" value="Submit" tabindex="3"/> <input type="reset" value="Clear" tabindex="4"/></p>
         </form>
         <p class="registerlink">You can <a href="/register">register here.</a></p>
+        <p class="registerlink">Forgot your password? <a href="/forgotpassword">Reset it here.</a></p>
     </div>
 
 </main>
