Reword the form-clearing inputs to say 'Clear' not 'Reset' [https://trello.com/c/wNCuc6VH]

--- a/src/main/resources/templates/addwisdom.html
+++ b/src/main/resources/templates/addwisdom.html
@@ -11,7 +11,7 @@
     <form action="#" th:action="@{/addwisdom}" th:object="${wisdomToAdd}" method="post">
         <p>Wisdom: <input type="text" th:field="*{wisdomContent}" th:placeholder="#{placeholder.wisdomContent}" tabindex="1"/></p>
         <p>Attribution: <input type="text" th:field="*{attribution}" th:placeholder="#{placeholder.wisdomAttribution}" tabindex="2"/></p>
-        <p><input type="submit" value="Submit" tabindex="3"/> <input type="reset" value="Reset" tabindex="4"/></p>
+        <p><input type="submit" value="Submit" tabindex="3"/> <input type="reset" value="Clear" tabindex="4"/></p>
     </form>
 </div>
 </main>
