--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -14,7 +14,7 @@
         <p>Display Name (W.I.P.): <input type="text" th:field="*{displayName}" th:placeholder="#{placeholder.displayName}" tabindex="3"/></p>
         <p>Password: <input type="password" th:field="*{password}" th:placeholder="#{placeholder.password}" tabindex="4"/></p>
         <p>Confirm Password: <input type="password" th:field="*{confirmPassword}" th:placeholder="#{placeholder.password}" tabindex="5"/></p>
-        <p><input type="submit" value="Submit" tabindex="6"/> <input type="reset" value="Reset" tabindex="7"/></p>
+        <p><input type="submit" value="Submit" tabindex="6"/> <input type="reset" value="Clear" tabindex="7"/></p>
     </form>
 </div>
 </main>
