--- a/src/main/resources/static/styles/global.css
+++ b/src/main/resources/static/styles/global.css
@@ -1,9 +1,9 @@
 html{
-    --color-bg1: #d4e4bc;
-    --color-bg2: #96acb7;
-    --color-1: #40376e;
-    --color-2: #48233c;
-    --color-placeholder: #9094a7;
+    --color-bg1: #ffae03;
+    --color-bg2: #e67f0d;
+    --color-1: #fe4e00;
+    --color-2: #e9190f;
+    --color-placeholder: #ff0f80;
 
 
 }
