--- a/src/main/resources/static/styles/global.css
+++ b/src/main/resources/static/styles/global.css
@@ -1,9 +1,9 @@
 html{
-    --color-bg1: #ffae03;
-    --color-bg2: #e67f0d;
-    --color-1: #fe4e00;
-    --color-2: #e9190f;
-    --color-placeholder: #ff0f80;
+    --color-bg1: #427396;
+    --color-bg2: #CC514E;
+    --color-1: #D4FCF8;
+    --color-2: #DEEDFF;
+    --color-placeholder: #BABABA;
 
 
 }
