Blue Steel colors

--- a/src/main/resources/static/styles/global.css
+++ b/src/main/resources/static/styles/global.css
@@ -1,8 +1,8 @@
 html{
-    --color-bg1: #427396;
-    --color-bg2: #CC514E;
-    --color-1: #D4FCF8;
-    --color-2: #DEEDFF;
+    --color-bg1: #eeeeee;
+    --color-bg2: #ACCDFA;
+    --color-1: #54647A;
+    --color-2: #4978BB;
     --color-placeholder: #BABABA;
 
 
