--- a/src/main/resources/static/styles/global.css
+++ b/src/main/resources/static/styles/global.css
@@ -59,6 +59,11 @@ button, .vote-up-button{
     background-color: var(--color-bg2) !important;
 }
 
+.view-on-leaderboard-button{
+    color: var(--color-2) !important;
+    background-color: var(--color-bg2) !important;
+}
+
 .toast{
     color: var(--color-2) !important;
     background-color: var(--color-bg2) !important;
