--- a/src/main/resources/templates/fragments/wisdomcardlist.html
+++ b/src/main/resources/templates/fragments/wisdomcardlist.html
@@ -8,8 +8,9 @@
 <div th:fragment="wisdomcardlist">
 <div class="wisdomlist" th:unless="${#lists.isEmpty(allWisdoms)}">
     <div class="row" th:each="wisdom : ${allWisdoms}">
+        <a th:id="${wisdom.wisdomContent}" class="wisdomCardAnchor"></a>
         <div class="col s12">
-            <div class="card hoverable" th:id="${wisdom.wisdomContent}">
+            <div class="card hoverable">
                 <div class="card-content">
                     <a class="card-title" th:href="@{'/viewwisdom?wisdomContent=' + ${wisdom.wisdomContent} + '&wisdomAttribution=' + ${wisdom.attribution}}" th:text="${wisdom.wisdomContent}">A good programmer is someone who looks both ways
                         before crossing a
