--- a/src/main/resources/static/styles/global.css
+++ b/src/main/resources/static/styles/global.css
@@ -4,8 +4,6 @@ html{
     --color-1: #54647A;
     --color-2: #4978BB;
     --color-placeholder: #BABABA;
-    --header-offset: -64;
-
 
 }
 body {
@@ -52,7 +50,7 @@ h3, h4, h5, h6{
 
 .wisdomCardAnchor{
     position: relative;
-    top: var(--header-offset)px;
+    top: -100px;
 }
 
 button, .vote-up-button{
