Stop hiding navbar buttons on small screens [https://trello.com/c/fxoeqqG9]

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -10,7 +10,7 @@
         <nav>
             <div class="nav-wrapper">
                 <a href="/wisdomleaderboard" class="brand-logo">UPWISE</a>
-                <ul class="right hide-on-med-and-down">
+                <ul class="right">
                     <li><a href="/addwisdom">Submit</a></li>
                     <li><a href="/wisdomleaderboard">Leaderboard</a></li>
                     <li><a href="/recentwisdom">Recent</a></li>
